<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <ImageView
        android:id="@+id/imageViewCaptcha"
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:src="@color/colorGreyLight"
        android:scaleType="centerCrop" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:textColor="@android:color/darker_gray"
        android:text="@string/label_enter_captcha"/>

    <EditText
        android:id="@+id/editTextCaptcha"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/hint_edit_text_captcha"
        style="@style/CaptchaEditTextStyle"/>

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/label_button_send"
        style="@style/CaptchaButtonStyle"/>

</LinearLayout>