<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/colorSettingsBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorMain"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/title_settings"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

            </FrameLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageViewAvatar"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_gravity="center"
                    android:src="@color/colorSettingsBackground"/>

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginBottom="16dp"
                    tools:text="Влад Сапожников"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

            </LinearLayout>


            <Button
                android:id="@+id/buttonClearCache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:textColor="@color/colorMain"
                android:text="@string/label_clear_cache"
                android:layout_marginBottom="1px"
                android:textAllCaps="false"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/buttonContactWithDevelopers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:textColor="@color/colorMain"
                android:layout_marginBottom="1px"
                android:text="@string/label_contact_developers"
                android:textAllCaps="false"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/buttonWebsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:textColor="@color/colorMain"
                android:text="@string/label_website"
                android:layout_marginBottom="1px"
                android:textAllCaps="false"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/buttonPolitics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:textColor="@color/colorMain"
                android:text="@string/label_politics"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"/>

            <Button
                android:id="@+id/buttonExit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:textColor="@color/colorMain"
                android:text="@string/label_exit"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>