<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/tools"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorMain"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


            <info.hoang8f.android.segmented.SegmentedGroup
                xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:orientation="horizontal"
                segmentedgroup:sc_border_width="1dp"
                segmentedgroup:sc_checked_text_color="@color/colorMain"
                segmentedgroup:sc_corner_radius="8dp"
                segmentedgroup:sc_tint_color="@android:color/white">

                <RadioButton
                    android:id="@+id/radioButtonAllMusic"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tab_all_music"
                    android:textAllCaps="false"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioButtonDownloadedMusic"
                    style="@style/RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tab_downloaded_music"
                    android:textAllCaps="false"
                    android:textSize="16sp" />

            </info.hoang8f.android.segmented.SegmentedGroup>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-7685514492081797/3355158717">
    </com.google.android.gms.ads.AdView>

    <EditText
        android:id="@+id/editTextSearch"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:singleLine="true"
        android:hint="@string/hint_search" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewMusic"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/ProgressBarStyle" />

        <LinearLayout
            android:id="@+id/linearLayoutFailure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="gone"
            android:layout_margin="32dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_warning"
                android:tint="@color/colorMain"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/msg_session_complete"
                android:fontFamily="sans-serif-light"
                android:textSize="14sp"
                android:layout_margin="16dp"
                android:textColor="@android:color/black"/>

            <Button
                android:id="@+id/buttonResignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:background="@drawable/button_reload_drawable"
                android:textAllCaps="true"
                android:text="Переавторизоваться"/>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>